# iban-validator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 84e60082b139_adding_iban_validations_model.py
src/: config.py  db.py  main.py  queue.py  worker.py
src/iban/: models.py  router.py  schemas.py  services.py  utils.py
src/iban/validator/: exceptions.py  helpers.py  iban.py
tests/: conftest.py  utils.py
tests/integration/iban/: test_router.py
tests/unit/iban/: test_services.py
