[tool.poetry]
name = "iban"
version = "0.1.0"
description = "IBAN Validation API"
authors = ["pancevac <sinisa.buncic7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.3"
SQLAlchemy = "^2.0.21"
alembic = "^1.12.0"
SQLAlchemy-Utils = "^0.41.1"
psycopg2-binary = "^2.9.8"
asyncpg = "^0.28.0"
arq = "^0.25.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.25.0"
pytest = "^7.4.2"
schwifty = "^2023.9.0"
pytest-postgresql = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
